--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ font-family: 'Poppins', sans-serif;
 
 <div class="max-w-screen-lg min-h-[20px] mx-auto py-5 px-8 md:px-16 lg:px-2"> 
 
-<div class=" grid grid-cols-5 gap-2 bg-white absolute -bottom-20 mb-20 ">
+<div class=" grid grid-cols-5 gap-2 bg-white absolute -bottom-20 mb-20 sm:hidden md:hidden">
 
   <div class="card auto ">
   <figure class="px-5 pt-5">
@@ -174,7 +174,7 @@ font-family: 'Poppins', sans-serif;
       
 <section class="">
 
-<div class="flex justify-between">
+<div class="flex sm:flex-row md:flex-row justify-between">
 
   <div class="left">
   <h1 class="text-2xl font-bold text-black mb-1">Deal of the day</h1>
@@ -446,7 +446,7 @@ font-family: 'Poppins', sans-serif;
     </section>
     <div class="button-shop-all flex items-center justify-center">
 
-    <button class="btn btn-error rounded-md  mt-3">Shop All</button>
+    <button class="btn btn-error rounded-md  mt-10">Shop All</button>
       </div>
 
   </section>
